tests/golden/type_errors/array_map_generic_callback.cd
let identity = fun<T>(value: T): T { return value; };
map([1], identity);
