tests/golden/type_errors/array_map_generic_callback.err
Type error at 2:18: map expects a non-generic callback
  map([1], identity);
                   ^
